media/css/v1.scss
/* ... */
.profile .submit.remove {
    .delete {
        float: none;
    }
    .reduced {
        float: left;
        margin: 0;
    }
}
#error {

    h1 {
        font-size: 3em;
        padding: .75em 0 .25em;
    }
    p {
        margin: 1em 0;
        line-height: 175%;
    }
}
.v1 .view .grid_4 {
    p, ul {
        margin-bottom: 2em;
    }

    ul {
        padding: 0;

        &.errorlist {
            margin-bottom: 0;
            width: auto;
        }
    }
}
.v1 .view.new-message form {
    padding: 4em 2em 2em;

    div.recipient {
        float: left;
    }
    div.or {
        float: left;
        font-weight: bold;
        margin: 0 20px;
        padding-top: 41px;
        text-align: center;
    }
    div.team {
        float: left;
    }
    div.disabled {
        @include opacity(0.3);
    }
}

/* Video view */
.video_view {

    .view {
        position: relative;

        p.view-notice {
            margin: 1em 0;
            padding-right: 0;

            a {
                border-bottom: 1px dotted $dark;
                color: inherit;
                text-decoration: none;
            }
        }

        .tab {
            clear: both;
        }

        video, object, .unisubs-widget span.unisubs-videoplayer {
            height: 370px !important;
            width: 620px !important;
        }

        #video-tab, #comments-tab {
            padding-top: 10px;

            h3 {
                margin-top: 1em;
            }
        }

        #activity-tab, #urls-tab {
            padding: 0;
        }

        #comments-tab {
            padding-left: 10px;
        }

        .tools {
            margin: 0 0 0 -10px;
            padding-right: 0;
        }

        > div {
            clear: both;
            padding: 0;
        }

        #video-tab .video-tools {

            h3 {
                border-bottom: 1px solid $fainter;
                font-weight: normal;
                margin: 0 0 .5em;
                padding: 1em 0 .5em;
            }

            ul {
                margin-bottom: 1em;
                padding: 0;
            }

            p {
                margin-bottom: 1em;
            }
        }
    }

    span.unisubs-tabTextfinish {
        display: none !important;
    }

    button.follow-button, button.follow-button:hover {
        background: transparent;
        border: none;
        color: $lighter;
        margin: 0;
        padding: 1em;
        position: absolute;
        text-shadow: none;
        top: 0; right: 0;

        &.follow:hover {
            color: #8ca367;
        }

        &.unfollow:hover {
            color: #B6464D;
        }
    }

    ul#subtitles-menu {
        img, a, span {
            vertical-align: middle;
        }
    }
}
.v1 .context {
    border-left: none;
    border-right: 1px solid $fainter;
    margin-right: 0;
    padding: 0 20px 0 0;
    width: 289px;
    word-wrap: break-word;
    @include linear-gradient(right, hsla(0, 0%, 97%, 1), hsla(0, 0%, 100%, 1) 2%, hsla(0, 0%, 100%, 1));

    p.permalink {
        margin: -.5em 0 .5em;

        a {
            color: $faint;
            font-size: 11px;
            text-decoration: none;
        }
    }

    .section {
        margin: 2em 0 0 0;
        padding: 0;
    }

    .logo {
        float: left;
        margin-right: 0.5em;
    }

    .abbr {
        clear: both;
        position: relative;

        .expand {
            border-top: 1px solid $faintest;
            color: $lighter;
            display: block;
            margin-top: .5em;
            padding: .5em 0;
            text-align: center;
            text-decoration: none;
        }

        div {
            height: 6em;
            overflow: hidden;
        }

        &.expanded div {
            height: auto;
        }

    }

    #widget_div {
        padding-bottom: 1.5em;
    }

    video, object, .unisubs-widget span.unisubs-videoplayer, audio {
        height: 173px !important;
        width: 289px !important;
    }

    #description {
        line-height: 150%;

        p {
            margin-bottom: .5em;
        }
    }

    a {
        text-decoration: none;
    }

    h2, h3, h4 {
        word-wrap: break-word;
    }

    h1 a, h2 a {
        color: inherit;
    }

    h1, h2, h3 {
        font-weight: normal;
    }

    h3 {
        border-bottom: 1px solid $fainter;
        clear: both;
        margin-bottom: .5em;
        padding: 2em 0 .5em;

        &.sub-title {
            border: none;
            color: $dark;
            line-height: 1.25em;
            margin-bottom: -.25em;
            padding-top: 0;

            a {
                color: $dark;
            }
        }
    }

    h4 {
        clear: both;
        font-size: 13px;
        padding: .5em 0 1em;
    }

    ul {
        padding: 0;
    }

    ul.buttons {
        float: left;
        width: 100%;

        li {
            display: inline;

            a {
                display: block;
                float: left;
                height: 22px;
                margin-right: .25em;
                padding: .25em;
                text-indent: -9999em;
                width: 22px;

                &.facebook {
                    background: url('../images/share_icons.png') no-repeat 5px 5px;
                }

                &.twitter {
                    background: url('../images/share_icons.png') no-repeat 5px -32px;
                }

                &.email {
                    background: url('../images/share_icons.png') no-repeat 5px -67px;
                }
            }
        }
    }

    .notation {
        color: inherit;
    }
}
/* ... */

